# gathe-interview

./: .gitignore  README.md  pyproject.toml  pytest.ini
src/: conftest.py  db.py  deps.py  main.py  settings.py  utils.py
src/migrations/models/: 0_20220111100512_init.sql  1_20220111101727_create_fields_for_document_and_category.sql  2_20220111114931_removed_can_create_on_document_model.sql  3_20220111170010_member_id_added_to_permission_models.sql  4_20220111170131_member_id_renamed_to_member.sql  5_20220111195500_can_create_field_added_to_document_permission_model.sql  6_20220111210237_polymorphism_permission_abstract_base_class.sql  7_20220111210539_table_renamed.sql  8_20220111210757_have_only_one_r.sql
src/models/: document.py  member.py  permission.py
src/routers/: document.py  member.py  permission.py
src/schemas/: category.py  document.py  member.py  permission.py
src/services/: category.py  document.py  member.py  permission.py
src/tests/: helpers.py  test_document_api.py  test_document_service.py  test_permission_api.py  test_permission_service.py
