[tool.poetry]
name = "permission_system"
version = "0.1.0"
description = ""
authors = ["Hossein Sokhandan <iamsokhandan@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
tortoise-orm = {version = "0.17.8", extras = ["asyncpg"]}
aerich = "^0.6.1"
black = "^21.12b0"
uvicorn = "^0.16.0"
pydantic = {extras = ["dotenv"], version = "^1.9.0"}
asyncio = "^3.4.3"
pytest-asyncio = "^0.16.0"
httpx = "^0.21.3"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
asynctest = "^0.13.0"
black = {version = "^21.12b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
